Add some content

--- a/_posts/2016-12-08-SEA.md
+++ b/_posts/2016-12-08-SEA.md
@@ -5,3 +5,31 @@ title: SEA - The Simple Encryption Algorithm
 
 # SEA
 The Simple Encryption Algorithm (SEA) is a very very simple symmetrical block cipher designed by me. It has a key and data size of 128-bits, or 16 bytes. It uses some elements from AES, such as a key schedule and the sbox.
+
+# Basic concepts
+## Round IV
+Each round has a IV "block", which is 128 - bits in size. This adds the random factor to this and makes it much harder to decrypt. Unfortunately, this means that in order to decrypt, you need to know two pieces of information: the key, and the round IV for each round.
+
+## Key Schedule
+The key schedule is a group of keys, one for each round. The key is derived from the previous key by XORing the round IV with the previous key. If the result of the XOR operation is 00, then it is set to 01, because XORing by zero does absolutely nothing to hide the data.
+
+# Basic operations
+## SubBytes
+SubBytes (substitute bytes) operates on the same idea as AES. In fact, it uses the same sbox table as AES, since the sbox for AES was designed for strength.
+
+When encrypting, replace each byte with the corresponding byte in the sbox.
+
+When decrypting, replace each byte with the corresponding byte in the inverse sbox.
+
+## MixCells
+Here, we rearrange cells within a columns.
+
+The first row remains constant. The second column is shifted by one. The third is shifted by two, and the fourth column is shifted by two. The direction it is shifted depends on whether you are encrypting or decrypting. For encrypting, you shift up. When decrypting, you shift down.
+
+## XORBytes
+In this step, we XOR the data output from the previous step with the round key. The operations for this step are the same for both encrypting and decrypting.
+
+## GaloisMult
+In this step, we multiply the output from the previous data by the round key, but not using matrix multiplication. I was unable to calculate the inverse of Galois Field in a spreadsheet due to the limited functions, so this is a compromise.
+
+When encrypting, we multiply by the round key. When decrypting, we multiply by the multiplicative inverse of the round key.
