--- a/_posts/2016-12-08-SEA.md
+++ b/_posts/2016-12-08-SEA.md
@@ -38,7 +38,7 @@ When encrypting, we multiply by the round key. When decrypting, we multiply by t
 As with the AES post, I will not explain every little detail. Here, I will go over the special things I had to do
 
 ## GMUL
-If you read the AES post first, you might remember that I had a lookup table for multiplication in a Galois Field. However, the table only covered multiplication by 02, 03, 09, 0B, 0D, and 0E. SEA multiplies by any value from 00 to FF, and thus would a require a lookup table of 256^2, which would have 65,563 entries, way too big for a simple lookup.
+If you read the AES post first, you might remember that I had a lookup table for multiplication in a Galois Field. However, the table only covered multiplication by 02, 03, 09, 0B, 0D, and 0E. SEA multiplies by any value from 00 to FF, and thus would a require a lookup table of 256^2, which would have 65,536 entries, way too big for a simple lookup.
 
 Unfortunately, this means that we have to use a script. This function takes two hexadecimal strings and multiplies it in a Galois Field of size 2^8, and returns a hexadecimal answer.
 
@@ -133,3 +133,10 @@ function generateRandomMatrix(min, max, rows, columns) {
 ```
 
 This function generates a matrix filled with random hex values, which is then inserted back into the spreadsheet.
+
+## Multiplicative Inverse
+To calculate the multiplicative inverse of a number, we need to
+
+# Code
+* [Google Scripts](https://script.google.com/macros/d/MakfnMp9MkdADgT1uTLSnexF13dc96xsf/edit?uiv=2&mid=ACjPJvFFAS54XsjxRTc4t3VC38_XmdKaTWgLIZSoaI4DCY1_NpKOIvHbfE2Ogzo1EZt3P5nlXmLYd2Q00YxPQaJkDSL8kU6S6cHrD7Aos745h7LYQ_rihqSHRSI5WOng8oAkv2sVM88)
+* [Github](https://github.com/PoisonNinja/sea)
